{
    "name": "Inputs",
    "maps": [
        {
            "name": "Controls",
            "id": "0a5d3245-1c9e-45d9-a30e-1de28d76a33a",
            "actions": [
                {
                    "name": "Specie1",
                    "type": "Button",
                    "id": "f6564417-2294-4742-a138-2b20111b9b6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie2",
                    "type": "Button",
                    "id": "c05397c9-db33-41b1-908b-3c4552921e51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie3",
                    "type": "Button",
                    "id": "ddc10496-dee8-4bd4-a8e9-f79fa75b40a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie4",
                    "type": "Button",
                    "id": "c8e4c17f-be08-466f-9a48-e60be78f6137",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie5",
                    "type": "Button",
                    "id": "4b442033-c4e3-4e33-8b52-1111bd5d24b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie6",
                    "type": "Button",
                    "id": "73247af8-2013-4303-a2e9-8f0283788968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie7",
                    "type": "Button",
                    "id": "c77f630e-81e7-4deb-9d63-94339d7cd142",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie8",
                    "type": "Button",
                    "id": "9ddacf6f-5d94-48b5-b181-e0f60a2e7278",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Specie9",
                    "type": "Button",
                    "id": "f8010c77-ae3f-4836-a330-0e3a614b6291",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "33052d6c-1966-43a0-871a-d91633a726eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "a4bee254-c72a-4214-b44a-cd93b850a896",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpeedDown",
                    "type": "Button",
                    "id": "26b59656-ee93-4bd1-949c-43f71c83bd56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextSpecie",
                    "type": "Button",
                    "id": "251ef320-9a51-4fa6-b8f9-dc812da67486",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreviousSpecie",
                    "type": "Button",
                    "id": "f34beb2c-4ec3-46b8-9dad-964fbc35db9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fullscreen",
                    "type": "Button",
                    "id": "36bbd5e3-9008-48b2-a78b-7339880f8c18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "a28a5720-77c4-414f-8a9e-599b7c3cbb1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e5d04f60-c021-4543-a8c2-8aca082d1e38",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2c0e475-08b3-47a4-a3a3-19b1cb9f0431",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c06c0a9-582d-49f6-a338-7b555cc7edcc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06d7427f-ed19-4034-97b2-292bba85bd23",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e437bbc6-8257-4505-85da-24511c5970fa",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextSpecie",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72b83af0-af38-4166-9883-2de26a14c3be",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousSpecie",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eea844b8-b57e-4393-942a-6a285979ebdb",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "555a7865-d8de-4558-b356-302eb73bad72",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88f9888b-9a45-4679-9c1f-708c5c1b6167",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff018cd8-6518-4ec0-b2df-0e0b52626289",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98f9ef6b-cb6e-4464-90da-2722b2d84e76",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb6735d2-3c1d-4185-bcf0-37a95084d126",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b78ba47-e41b-4078-8597-53730abbb633",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea3d21cb-14cd-44db-8aa9-27439d11abf2",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Specie6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0566459-4e4a-4a75-9862-1b092f184f2b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fullscreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "040c2b23-c1a2-42cc-8805-99e081944b57",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}